<resources>
    <string name="app_name">Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="search">search</string>
    <string name="main_menu">main_menu</string>
    <string name="edit">edit</string>
    <string name="filter">filter</string>
    <string name="book_title">Book Title</string>
    <string name="description">Description</string>
    <string name="status">Status:</string>
    <string name="owner">Owner:</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>


    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>

    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>

    <string name="confirm">Confirm</string>

    <string name="request_string">Has requested to borrow this book.</string>
    <string name="accept_request">ACCEPT</string>
    <string name="reject_request">REJECT</string>

    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="choose_location">Choose meeting location</string>

    <string name="meeting_location">Meeting Location</string>
    <string name="scan_isbn">SCAN ISBN</string>

    <string name="choose_book_image">Choose Book Image</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_photo">Take Photo</string>

    <string name="filter_book">Filter Books</string>

    <string name="return_book">RETURN</string>
    <string name="book_requested">REQUESTED</string>
    <string name="borrow_book">BORROW</string>
    <string name="request_book">REQUEST</string>

    <string name="action">Action</string>
    <string name="book_image">Book image</string>

</resources>
