<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_edit_book_title"
        style="@style/OutlinedSpacedTextInputLayout"
        android:hint="@string/book_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_edit_book_author"
        style="@style/OutlinedSpacedTextInputLayout"
        android:hint="@string/author">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_edit_book_isbn"
        style="@style/OutlinedSpacedTextInputLayout"
        android:hint="@string/isbn"
        app:endIconDrawable="@drawable/ic_baseline_photo_camera_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_edit_book_description"
        style="@style/OutlinedSpacedTextInputLayout"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/book_add_photo_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/ic_baseline_add_photo_alternate_24"
        android:scaleType="centerInside" />

</merge>