<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_preview_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/book_preview_card"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginHorizontal="8dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/book_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/book_preview_image"
            android:layout_width="61dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/bok_preview_title_text"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/book_title"
            android:textSize="18sp"
            android:textColor="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_preview_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_preview_description_text"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_preview_image" />

        <TextView
            android:id="@+id/book_preview_status_text"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/status"
            android:textColor="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_preview_owner_text" />

        <TextView
            android:id="@+id/book_preview_owner_text"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/owner"
            android:textColor="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_preview_description_text" />

        <TextView
            android:id="@+id/book_preview_author_text"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/author"
            android:textColor="@color/md_black_1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_preview_image"
            app:layout_constraintTop_toBottomOf="@+id/bok_preview_title_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>